smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/doc-comments-dangling-before-namespace.smithy
// Syntax error at line 4, column 1: Expected a namespace definition but found DOC_COMMENT('/// This is a dangling doc comment, and not allowed.\n')
$version: "2.0"

/// This is a dangling doc comment, and not allowed.
